--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "todo-app",
   "version": "1.0.0",
   "description": "A basic CRUD Todo application using Node.js, Express.js, and MongoDB.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "keywords": ["todo", "express", "mongoose", "mongodb", "crud"],
   "author": "",
