trying to fix build error

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,21 @@
+// {
+//   "version": 1,
+//   "builds": [{"src": "./app.js", "use": "@vercel/node"}],
+//   "routes": [{"src": "/(.*)", "dest": "/"}]
+// }
+
 {
   "version": 2,
-  "builds": [{"src": "./app.js", "use": "@vercel/node"}],
-  "routes": [{"src": "/(.*)", "dest": "/"}]
+  "builds": [
+    {
+      "src": "app.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/app.js"
+    }
+  ]
 }
